Fixed padding on mobile project pop up buttons

--- a/app/globals.css
+++ b/app/globals.css
@@ -186,6 +186,9 @@ html.popup-active {
     overflow-y: hidden;
 }
 
+.compensate-scrollbar {
+    padding-right: var(--scrollbar-compensate, 1rem);
+}
 
 @media (max-width: 767px) {
     
